# alljob

./: .better-commits.json  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  monkeytype.sqlite3  package-lock.json  package.json  pyproject.toml
.github/workflows/: codeql.yml  docker-build.yml  flake8.yml
backend/: pyproject.toml
frontend/: .eslintrc.cjs  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/app/: router.options.ts
frontend/assets/style/: main.css
frontend/components/: TheNavbar.vue
frontend/components/common/: FilledButton.vue  LinedButton.vue  LoadingIndicator.vue
frontend/components/offert/: DetailedOffert.vue  FilterList.vue  JobProvider.vue  JobSeniority.vue  OffertCard.vue  OffertList.vue  OffertLocations.vue  OffertTechnologies.vue  WorkingMode.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue  offert.vue  offerts.vue
frontend/pages/offert/: [id].vue
frontend/pages/offerts/: [id].vue
frontend/plugins/: directives.ts
frontend/types/: offert.d.ts
services/: docker-compose.yml
services/backend/: Dockerfile
services/backend/src/: config.py  main.py
services/backend/src/database/: db.py  dbClient.py  queryCreator.py
services/backend/src/docs/: main.html
services/backend/src/offerts/: errors.py  routes.py  schemas.py
services/scrapper/src/: cities.sqlite3  geoUtils.py  main.py  mostCommonCities.py  offertFactory.py
services/scrapper/src/database/: dbClient.py
services/scrapper/src/factories/: bullDogJob.py  itPracujPl.py  justJoin.py  noFluffJobs.py
(+2 files in other folders)
