[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kacpereqqo <remzak.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
monkeytype = "^23.3.0"
pytest = "^7.3.1"

[tool.poetry.group.backend.dependencies]
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymongo = "^4.3.3"


[tool.poetry.group.scrapper.dependencies]
pymongo = "^4.3.3"
pycountry = "^22.3.5"
geopy = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
