[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kacpereqqo <remzak.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"


[tool.poetry.group.dev.dependencies]
monkeytype = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
